Update setting for Eclipse